samples/_failures_safe/1761161871_ee038c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edcef346.c: In function ‘print_token’:
./samples/SAFE/__tmp_edcef346.c:168:24: error: ‘TO’ undeclared (first use in this function)
  168 |     if (token->type != TO
      |                        ^~
./samples/SAFE/__tmp_edcef346.c:168:24: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_edcef346.c:168:26: error: expected ‘)’ at end of input
  168 |     if (token->type != TO
      |        ~                 ^
      |                          )
./samples/SAFE/__tmp_edcef346.c:168:5: error: expected declaration or statement at end of input
  168 |     if (token->type != TO
      |     ^~
